(Recent) Revision history for Perl extension Data-Dumper-Interp

7.010 - Test messages to try to diagnose mystery test failure only on Windows
7.009 - Diagnose invalid method modifier when imported, not when 1st called
7.008 - Remove multiple "use 5.xxx" which is deprecated in Perl 5.39.8
7.005 - Windows portability; Rm multiple use VERSION (deprecated in perl 5.9)
7.004 - 'd' method modifier ("debug friendly") enables 'condense' and, if
        STDOUT is a utf-encoding handle, 'spacedots'.  Always used by dvis.
7.003 - Fix bug where $. was not preserved on first call (termwidth detection)
7.002 - Use wide chars only with Useqq("unicode") and utf STDOUT or ERR.
        'l' method modifier omits quotes in vis() string result.
        Useqq("underscores") separates digits of large numbers.
        Useqq("hex") shows numbers in hexadecimal
        Useqq("octets") optimizes string display for binary data, e.g.
          show octal escapes and not \n \r etc.
7.001 - dvis (and any with Useqq(...:condense) show replicated chars compactly
6.011 - Silence 'stty' message if no terminal width is available
6.010 - trying to find mystery test failure on one Windows smoker host
6.009 - Fix result-parsing bug with Deparse(1).
        Show (classname) before [] and {} from overloaded operators.
        Updated cmd.com support in qsh(), and allow $^O to be localized
6.008 - Recursively visit overload results.
6.007 - Require List::Util v1.45 for uniqstr.
        Croak if vis, etc. called in void context (typically a missing "say ").
        Fix bug where ivis & dvis would not interpolate \$ -> $
6.006 - Carp but don't die if invalid $varname is in ivis/divs string
6.005 - Avoid addrvis on temp container for avis/hvis - for test stability
6.004 - Fix bug Maxdepth off-by-1 with Refaddr. Renamed
        set_addrvis_digits -> addrvis_digits, which now gets with undef arg
6.003 - Fixed bug where AUTOLOAD did not preserve $@ etc.
6.001 - Added set_addrvis_digits() & addrvis_forget()
