@@ -3,10 +3,12 @@ author = Jim Avera
 license = CC0_1_0
 copyright_holder = Jim Avera
 
-[MetaResources]
-
 [GithubMeta]
 issues = 1
+
+[MetaProvides::Package]
+
+[MetaJSON]
 
 [@Git]
 
