@@ -64,6 +64,16 @@ BEGIN{
   # Disable buffering
   STDERR->autoflush(1);
   STDOUT->autoflush(1);
+
+  # NO!  Momentarily I thought it would be a Good Thing to set a standard
+  # terminal width in COLUMNS ignoring the actual terminal.  But some
+  # modules test term width autodetect by unsetting COLUMNS and would
+  # then get a (possibly) different result.
+  #
+  # So it is necessary for *every* package which probes for terminal width
+  # use robust code which won't fail even if there is no terminal
+  # (which is gross -- see Data::Dumper::Interp::_get_terminal_width)
+  ##$ENV{COLUMNS} = 80;
 }
 use POSIX ();
 use utf8;
@@ -94,18 +104,20 @@ our @EXPORT_OK = qw/$savepath $debug $silent $verbose %dvs dprint dprintf/;
 use Import::Into;
 use Data::Dumper;
 
-unless (Cwd::abs_path(__FILE__) =~ /Data-Dumper-Interp/) {
-  # unless we are testing DDI
-  #$Data::Dumper::Interp::Foldwidth = undef; # use terminal width
-  $Data::Dumper::Interp::Useqq = "controlpics:unicode";
-}
-
 use Cwd qw/getcwd abs_path/;
 use POSIX qw/INT_MAX/;
 use File::Basename qw/dirname/;
 use Capture::Tiny qw/capture capture_merged tee_merged/;
 use Env qw/@PATH @PERL5LIB/;  # ties @PATH, @PERL5LIB
 use Config;
+
+BEGIN {
+  unless (Cwd::abs_path(__FILE__) =~ /Data-Dumper-Interp/) {
+    # unless we are testing DDI
+    #$Data::Dumper::Interp::Foldwidth = undef; # use terminal width
+    $Data::Dumper::Interp::Useqq = "controlpics:unicode";
+  }
+}
 
 sub bug(@) { @_=("BUG FOUND:",@_); goto &Carp::confess }
 
